--- a/css/carrier.css
+++ b/css/carrier.css
@@ -18,6 +18,40 @@
    @copyright  2011 Boxtale SAS
    @license    http://www.gnu.org/licenses  GNU Lesser General Public License (LGPL)
 */
+
+.width200{
+  width: 200px;
+}
+
+.width400{
+  width: 400px;
+}
+
+.floatleft{
+  float: left;
+}
+
+.nomargin{
+  margin:0;
+}
+
+.padding5{
+  padding:5px;
+}
+
+.list_points_loaded{
+  display:none;
+  min-width:300px;
+}
+
+.mb15{
+  margin-bottom: 15px;
+}
+
+.mt15{
+  margin-top: 15px
+}
+
 #map_canvas {width:100%; height:93%;}
 .pointsUl ul li {list-style:none;}
 div.opc-overlay {
@@ -48,4 +82,32 @@ div.opc-main-block {position: relative }
  
 .pointsUl {
 text-align:left;
+}
+
+/* map */
+
+#mapContainer{
+  display:none;
+  width:80%;
+  height:80%;
+  position: absolute;
+  top:100px;
+  paddding:10px;
+  left:10%;
+  z-index:11111;
+  border:3px solid #000000;
+  background: #FFFFFF;
+}
+
+#mapContainer p{
+  width:98%;
+  text-align:right;
+  height:auto; 
+  padding-right:2%; 
+  margin-top:1%;
+}
+
+#mapContainer #map_canva{
+  width:100%; 
+  height:89%;
 }
