--- a/css/carrier.css
+++ b/css/carrier.css
@@ -111,3 +111,9 @@ text-align:left;
   width:100%; 
   height:89%;
 }
+
+.click-here{
+	text-decoration: underline;
+	font-weight : bold;
+	color: #333;
+}
