--- a/css/backend_styles.css
+++ b/css/backend_styles.css
@@ -138,8 +138,16 @@ color:green;
   float: left;
 }
 
+.valigntop{
+  vertical-align: top;
+}
+
 .valignmiddle{
   vertical-align: middle;
+}
+
+.valignbottom{
+  vertical-align: bottom;
 }
 
 .fullwidth{
@@ -151,6 +159,9 @@ color:green;
   width: 100px;
 }
 
+.widthauto-important{
+  width: auto !important;
+}
 
 .font-size10{
   font-size:10px;
@@ -166,8 +177,24 @@ color:green;
 
 /* Margin && padding */
 
+.pt4{
+  padding-top:4px;
+}
+
+.pt19{
+  padding-top:19px;
+}
+
+.pl2{
+  padding-left:2px;
+}
+
 .padding5{
   padding:5px;
+}
+
+.mt4-important{
+  margin-top:4px !important;
 }
 
 .mt10{
@@ -176,6 +203,10 @@ color:green;
 
 .mt20{
   margin-top:20px;
+}
+
+.ml5{
+  margin-left:5px;
 }
 
 .ml10{
@@ -188,6 +219,18 @@ color:green;
 
 .mr5{
   margin-right: 5px;
+}
+
+.mr10{
+  margin-right: 10px;
+}
+
+.mb4-important{
+  margin-bottom:4px !important;
+}
+
+.mb5{
+  margin-bottom: 15px;
 }
 
 .mb15{
@@ -228,9 +271,85 @@ border-color: #faebcc;
 color: #8a6d3b;
 }
 
+.inline-important{
+display:inline !important;
+}
+
+.inline-block{
+display:inline-block;
+}
+
+.block-important{
+display:block !important;
+}
+
+.float-none-important{
+float:none !important;
+}
+
+.ui-datepicker:before{
+display:none !important;
+}
+
+.ui-datepicker:after{
+display:none !important;
+}
+
+.btn.btn-default.filter:hover{
+  background:#00aff0;
+  border-color:#008abd !important;
+  color:#fff;
+  text-shadow:none;
+}
+
+.table-action{
+margin-top:2px;
+width:98%;
+}
 
 /* fixed size fancybox */
 /*.fancybox-skin, .fancybox-outer, .fancybox-inner, .fancybox-frame{
 width:1000px !important;
 height:760px !important;
 }*/
+
+.bootstrap .panel {
+font: 400 12px/1.42857 "Open Sans",Helvetica,Arial,sans-serif;
+background-color: #ebedf4 !important;
+border: 1px solid #ccced7 !important;
+box-sizing: border-box;
+color: #585a69;
+float: left;
+margin: 0 0 10px !important;
+padding: 1em !important;
+width: 100%;
+box-shadow:none !important;
+}
+
+.bootstrap .warn{
+padding-bottom:13px !important;
+}
+
+#ORDERSTABLE, #ORDERSTABLE1{
+	border: 1px solid #ccc;
+}
+
+.table tr th {
+    background: -moz-linear-gradient(center top , #f9f9f9, #ececec) repeat-x scroll left top #ececec;
+    color: #333;
+    font-size: 13px;
+    padding: 4px 6px;
+    text-align: left;
+    text-shadow: 0 1px 0 #fff;
+}
+
+/* filters design */
+.filters-box{
+	background-color: #ebedf4;
+	border: 1px solid #ccced7 !important;
+	color: #585a69;
+	margin: 0 0 10px 0 !important;
+	padding:13px !important;
+}
+
+.inline-block{ display: inline-block; }
