--- a/views/css/back-office-15.css
+++ b/views/css/back-office-15.css
@@ -3751,7 +3751,7 @@ i.mce-i-resize { color: #333333; }
 
 .mce-rtl .mce-textbox { text-align: right; direction: rtl; }
 
-.mce-throbber { position: absolute; top: 0; left: 0; width: 100%; height: 100%; opacity: 0.6; filter: alpha(opacity=60); zoom: 1; background: white url("img/loader.gif") no-repeat center center; }
+.mce-throbber { position: absolute; top: 0; left: 0; width: 100%; height: 100%; opacity: 0.6; filter: alpha(opacity=60); zoom: 1; background: white url("../img/loader.gif") no-repeat center center; }
 
 .mce-i-none { width: 16px; height: 16px; margin: 2px 0; }
 
