--- a/views/css/back-office.css
+++ b/views/css/back-office.css
@@ -1330,15 +1330,6 @@
     height: 92px;
 }
 
-#content-wrapper #box1 .content #img-operators table .colisprive {
-    background-image: url('../img/logo-copr.png');
-    background-repeat: no-repeat;
-    background-position: center;
-    min-width: 150px;
-    width: 180px;
-    height: 92px;
-}
-
 #content-wrapper #box1 .content #img-operators table .ups {
     background-image: url('../img/logo-ups.png');
     background-repeat: no-repeat;
@@ -1514,5 +1505,7 @@ height:760px !important;
     marin-bottom: 5px;
 }
 
-
+#disable_cart_important {
+  font-weight: bold;
+}
 
