--- a/views/css/carrier.css
+++ b/views/css/carrier.css
@@ -70,7 +70,7 @@ text-align:left;
 #mapContainer{
   display:none;
   width:60%;
-  height:60%;
+  height:560px;
   position: absolute;
   top:100px;
   paddding:10px;
